--- a/Ashok/post.html
+++ b/Ashok/post.html
@@ -80,7 +80,7 @@
     <div class="clear"></div>
 </div>
 <div class="footer">
-    &copy;Copyright By My Search Engine
+    &copy;Copyright By My Search Engine @powered by us
 </div>
 </body>
 </html>
